--- a/css/style.css
+++ b/css/style.css
@@ -55,17 +55,21 @@ footer{
 
 @-webkit-keyframes logo_wiggle{
   /*Your code here.*/
-
+  0% {width: 25px;}
+  100% {width: 420px;}
 }
 
 @keyframes logo_wiggle{
   /*Your code here.*/
-
+  0% {width: 25px;}
+  100% {width: 420px;}
 }
 
 #logo{
    /*Your code here.*/
-
+  animation-name: logo_wiggle;
+  animation-duration: 15s;
+  animation-iteration-count: 1;
 }
 
 /* Cards! */
@@ -157,7 +161,10 @@ header{
   background: #fff;
   border-bottom: 3px solid #50C7C7;
   /*Your  code here again.*/
-  text-align: center;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .nav_links{
@@ -186,10 +193,6 @@ header{
     flex-basis: 225px;
   }
 
-  /* .card > header{
-    justify-content: flex-start;
-  } */
-
   .card_big{
     -webkit-transform: scaleX(1.12);
             transform: scaleX(1.12);
@@ -198,13 +201,14 @@ header{
   /* Navbar */
   header{
     /*Your code here again.*/
-    justify-content: flex-start;
+    justify-content: space-between;
+    flex-direction: row;
   }
 
   .nav_links{
     /*Your code here again.*/
     flex-direction: row;
-    justify-content: flex-end;
+    justify-self: flex-end;
   }
 
   .nav_item a{
@@ -218,7 +222,25 @@ header{
   }
   /*Your code here again.*/
   /*You will want four selectors*/
+  body {
+    background-image: none;
+  }
+
+  .pricing {
+    align-items: flex-start;
+  }
+
+  .gallery {
+    display: none;
+  }
+
+  #gallery {display:none;}
 }
 
 /*Your code here again.*/
 /*Add media query to handle reduced-motion*/
+@media (prefers-reduced-motion: reduce){
+  #logo {
+    animation: none;
+  }
+}
